Update JS emulator and add Unicode image

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ or hide. You can copy and paste from there like normal.</p>
 		<option>FullDiskImage</option>
 		<option>VanillaDiskImage</option>
 		<option>ExperimentalOberonDiskImage</option>
+		<option>UnicodeDiskImage</option>
 		<option>ColorDiskImage</option>
 		<option>ColorBigmemDiskImage</option>
 	</select>
