--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body { font-family: Verdana, Arial, Helvetica, sans-serif; }
 <a href="http://projectoberon.com/">Project Oberon</a> in JavaScript and Java.</p>
 
 <p style="margin-right: 5em">Note that the JavaScript emulator does not support
-RS232 (except for emulated PCLink) or the original SPI (which is used for network and SD-card) and keyboard interfaces, but
+the original SPI (which is used for network and SD-card) and keyboard interfaces, but
 a simplified "paravirtualized" interface for keyboard, clipboard, sd-card, and
 power management instead. All these interfaces are also supported by the Java
 emulator (and others can be disabled) to make development easier.</p>
