Update disk images
Also add disk images that include the rescue system.

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@ or hide. You can copy and paste from there like normal.</p>
 		<option>MinimalBigmemDiskImage</option>
 		<option>FullBigmemDiskImage</option>
 		<option>ColorBigmemDiskImage</option>
+		<option>FullWithRescueDiskImage</option>
+		<option>FullBigmemWithRescueDiskImage</option>
 	</select>
 	<label><input id="withsource" type="checkbox" name="withsource">WithSource</label>
 	<input type="Button" value="Start" onclick="startEmu()"><br>
