--- a/emu-wasm.html
+++ b/emu-wasm.html
@@ -135,9 +135,37 @@ body { font-family: Verdana, Arial, Helvetica, sans-serif; }
   visibility: visible;
   height: 200px;
 }
-#controlbar.seriallink .hidewhenserial {
+#controlbar.seriallink .hidewhenserial, #controlbar.seriallink .hidewhenportused {
   display: none;
 }
+
+#controlbar.seriallink.dualserial .hidewhenportused {
+  display: inline-block;
+}
+
+#serialpreview {
+	display: none;
+	position: fixed;
+	bottom: 5px;
+	border: 2px solid #dfe4e6;
+	margin: 5px;
+	padding: 5px;
+}
+
+body.rightpreview #serialpreview {
+	right: 5px;
+	display: block;
+}
+
+body.leftpreview #serialpreview {
+	left: 5px;
+	display: block;
+}
+
+body.leftpreview #emulatorface {
+	margin-left: auto;
+}
+
 #exportoptions {
   width: 100%;
   background-color: #ccc;
@@ -234,7 +262,7 @@ body { font-family: Verdana, Arial, Helvetica, sans-serif; }
              ondrop="emulator.importFilesFromEvent(event);"
              title="Transfer data between the emulated system and your computer">
       <div class="popup right">
-        <div class="menuitem hidewhenserial">
+        <div class="menuitem hidewhenportused">
           <input type="text" id="linknameinput" placeholder="System.Tool"><!--
        --><input type="button" id="linkexportbutton" class="cap" value="Copy"
                  onclick="emulator.exportFile()"
@@ -245,7 +273,7 @@ body { font-family: Verdana, Arial, Helvetica, sans-serif; }
                 onclick="emulator.ui.toggleClipboard();"
                 value="clipboard">Show Clipboard</button>
 
-        <div class="menuitem hidewhenserial">
+        <div class="menuitem hidewhenportused">
           <input type="button" id="fileimportbutton" value="Import File…"
                  onclick="emulator.ui.linkFileInput.click();"
                  ondragover="emulator.cancelEvent(event);"
@@ -297,6 +325,9 @@ body { font-family: Verdana, Arial, Helvetica, sans-serif; }
 </form>
 <canvas id="screen" tabindex="1000" height="0"></canvas>
 <textarea id="clipboardinput"></textarea>
+</div>
+<div id="serialpreview">
+<canvas id="previewscreen"></canvas>
 </div>
 <a id="localsaveanchor" style="display: none;"></a>
 
