Update disk images
Rename ExperimentalOberon to ExtendedOberon; remove MinimalBigmem disk
image.

--- a/index.html
+++ b/index.html
@@ -45,12 +45,11 @@ or hide. You can copy and paste from there like normal.</p>
 		<option selected>MinimalDiskImage</option>
 		<option>FullDiskImage</option>
 		<option>VanillaDiskImage</option>
-		<option>ExperimentalOberonDiskImage</option>
+		<option>ExtendedOberonDiskImage</option>
 		<option>IntegratedOberonDiskImage</option>
 		<option>BootFromSerialLine</option>
 		<option>ColorDiskImage</option>
 		<option>UnicodeDiskImage</option>
-		<option>MinimalBigmemDiskImage</option>
 		<option>FullBigmemDiskImage</option>
 		<option>ColorBigmemDiskImage</option>
 		<option>FullWithRescueDiskImage</option>
